# CHARM

./: README.md
FESTO/: Readme.md  readme.md
FESTO/IoT_agent/: attributes.json  attributesProcessing.json  command.txt
FESTO/ROS2/: CMakeLists.txt  package.xml  readme.md
FESTO/RV_3SDB/: CMakeLists.txt  package.xml
FESTO/RV_3SDB/msg/: jointMessage.msg
FESTO/RV_3SDB/scripts/: RV_3SDB_Robot.py  getJointPosition.py  main.py  read_RV_3SDB.py  read_RV_3SDB2.py  sendJointCommands.py  sendJointCommands_backup.py
FESTO/RV_3SDB/src/: communication.py
FESTO/config/config_1/: config.json  topics.json
FESTO/config/config_2/: topics.json
FESTO/robot1/: CMakeLists.txt  package.xml
FESTO/robot1/msg/: cartesianMessage.msg  jointMessage.msg
FESTO/robot1/scripts/: Orchestrator.py  RV_3SDB.py  cartesianpoints.py  communication.py  getJoints.py  jointListner.py  test.py
UC2/: README.md
UC5/: README.md
UC5/IoT Agent Version 1/: README.md  attributes.json  attributescert.json  dataConfigurator.py  docker-compose.yml  main.py  opcuaClient.py  requirements.txt  subscriber.py
UC5/IoT Agent Version 1/Certificate/: certificate.pem  docker-compose.yml  key.pem  ssl.conf
UC5/IoT Agent Version 2 (Containerized)/: Dockerfile  README.md  docker-compose-orion.yml  docker-compose.yml
UC5/IoT Agent Version 2 (Containerized)/app/: attributes.json  attributescert.json  cb_subscriber.py  dataConfigurator.py  main.py  opcuaClient.py  opcua_client.py  opcua_server.py  requirements.txt  scripts.sh  subscriber.py  uwsgi.ini
(+2 files in other folders)
